# runtime

./: .gitignore  AGENTS.md  Cargo.toml  EPIC_Sovereign_Polyglot_Framework.md  NOTICE  biome.jsonc  buf.gen.yaml  devenv.nix  nx.json  package.json  tsconfig.base.json  tsconfig.json
.constitution/architecture/: changelog.md  containers.md  resilience.md  risks.md  strategy.md
.constitution/prd/: actors.md  capabilities.md  changelog.md  constraints.md  domain-model.md  glossary.md  vision.md
.constitution/reports/: bh005-bridge-provider-executed-fidelity-audit.md  epic-ad-docs-to-authority-coverage-matrix.json  epic-ad-docs-to-authority-freeze-gate-closure-inventory.md  epic-ad-docs-to-authority-freeze-gate-summary.md  epic-ad-framework-deferred-surface-decisions.md  epic-ad-kernel-backend-provider-local-surface-decisions.md  epic-ad-normative-docs-claim-inventory.json  epic-ad-typescript-freeze-gate-report.md  epic-af-conformance-gap-plan.json  epic-af-conformance-gap-plan.md  epic-al-portability-inventory.json  epic-al-portable-surface-conformance-gap-inventory.md  epic-al-rust-re-entry-gate-reassessment.md
.constitution/spikes/: README.md  SPK-BE002.md
.constitution/tasks/: changelog.md  critical-path.md
.constitution/tech-spec/: changelog.md  guidelines.md  stack.md
boundaries/framework/implementations/rust/conformance-runner/: Cargo.toml  project.json
boundaries/framework/implementations/rust/conformance-runner/src/: main.rs
boundaries/kernel/implementations/rust/grpc-service/: Cargo.toml  build.rs  project.json
boundaries/kernel/implementations/rust/grpc-service/src/: lib.rs  main.rs
boundaries/kernel/implementations/rust/grpc-service/tests/: interop_smoke.rs
boundaries/kernel/implementations/rust/kernel/: Cargo.toml  project.json
boundaries/kernel/implementations/rust/kernel/src/: cbor.rs  identity.rs  lib.rs  memory.rs  telemetry.rs  types.rs
boundaries/kernel/implementations/rust/kernel/tests/: kernel_baseline.rs
constitution/: AGENTS.md  Architecture.md  PRD.md  Tasks.md  TechSpec.md
constitution/archived/: README.md
constitution/reports/: runtime-boundary-performance-follow-up.md  runtime-foundation-hardening-retention-topology.md  runtime-foundation-hardening-review.md  runtime-foundation-hardening-sqlite-hot-path.md  runtime-monorepo-tooling-assessment.md
constitution/spikes/: epic-aa-kernel-conformance-promotion-closure-inventory.md  epic-ab-run-liveness-recovery-closure-inventory.md  (+33 more)
docs/: KrakenFrameworkDesignRationale.md  KrakenFrameworkSpecification.md  KrakenKernelDesignRationale.md  KrakenKernelSpecification.md  perf-benchmarks.md
framework/: Architecture.md  PRD.md  TechSpec.md
spikes/: sqlite-backend-validation.md
telemetry/: otel-attributes.json  project.json  semantic-conventions.md
(+1412 files in other folders)
