[workspace]
members = [
  "boundaries/kernel/implementations/rust/conformance-runner",
  "boundaries/kernel/implementations/rust/grpc-service",
  "boundaries/kernel/implementations/rust/kernel",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.95.0"
version = "0.1.0"

[workspace.dependencies]
ciborium = "0.2.2"
hex = "0.4.3"
prost = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tonic = "0.14.5"
tonic-prost = "0.14.5"
tonic-prost-build = "0.14.5"
tuvren-kernel-rust = { path = "boundaries/kernel/implementations/rust/kernel" }
tuvren-kernel-rust-grpc-service = { path = "boundaries/kernel/implementations/rust/grpc-service" }
